kubernetes/TrueNAS-Int copy/deployments/downloads/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: downloads
spec:
  replicas: 0
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:1.12.2
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          hostPath:
            path: /data/FastPool/AppData/Prowlarr
